# pan-2

./: .gitignore  AGENTS.md  CLAUDE.md  DEVLOG.md  LICENSE  README.md  SPEC.md  pyproject.toml
configs/: default.yaml  posttrain_overfit.yaml  posttrain_smoke.yaml  pretrain_fast.yaml  pretrain_pack.yaml  pretrain_pack_preview.yaml  pretrain_smoke.yaml
docs/: data-layout.md  ingest-codec.md
scripts/: bench_adamw.py  bench_bias_gelu.py  bench_conv_gelu.py  bench_encoder.py  bench_gather_cast.py  bench_gpu_pipeline.py  bench_group_norm_gelu.py  bench_pack_step.py  bench_pretrain.py  bench_residual_add.py  bench_transformer_fusion.py  build_pack_index.py  build_shards.py  measure_codec_quality.py  ncu_hot_kernels.py  probe_codec_negatives.py  profile_conv_gn_bwd.py  profile_step.py  profile_train_step.py  run_pack_pretrain.sh  run_pack_preview.sh  smoke.py  sweep_batch.py  train_posttrain.py  train_pretrain.py  train_pretrain_pipeline.py  tune_conv_gelu.py
src/pan2/: __init__.py  actions.py  config.py
src/pan2/data/: __init__.py  build.py  gpu_pipeline.py  shards.py  (+3 more)
tests/: test_ckpt_compile_compat.py  test_future_goals.py  test_gather_cast.py  test_gpu_pipeline_unit.py  test_gpu_shard_ring.py  test_heldout_split.py  test_kernel_bias_gelu.py  test_kernel_conv_gelu.py  test_kernel_fused_adamw.py  test_kernel_group_norm_gelu.py  test_kernel_layer_norm_affine.py  test_kernel_residual_add.py  test_model_forward.py  test_multi_negatives.py  test_pack_index.py  test_pack_loader.py  test_preprocess.py  test_shards.py  test_synthetic_batch.py  test_train_step.py
(+21 files in other folders)
