[project]
name = "pan2"
version = "0.2.0"
description = "Goal-conditioned Minecraft agent: action-free video goal pretrain, then action post-train. Single-GPU first."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "infatoshi" }]
keywords = ["minecraft", "video-pretraining", "goal-conditioned", "behavior-cloning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.26",
  "pyyaml>=6.0",
  "einops>=0.8",
  "tqdm>=4.66",
  "torch>=2.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/Infatoshi/pan-2"
Source = "https://github.com/Infatoshi/pan-2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pan2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
